--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.3.5",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "jade": "~1.11.0",
+    "mongoose": "^5.10.11",
     "morgan": "^1.9.1",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0"
