--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "www",
+  "name": "nodejs_socket",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-app": "node index.js"
+    "start-app": "nodemon index"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -15,7 +15,12 @@
     "jade": "~1.11.0",
     "mongoose": "^5.10.11",
     "morgan": "^1.9.1",
+    "redis": "^3.0.2",
+    "redisscan": "^2.0.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
